--- a/TomlLibrariesBenchmark/TomlLibrariesBenchmark.csproj
+++ b/TomlLibrariesBenchmark/TomlLibrariesBenchmark.csproj
@@ -2,6 +2,7 @@
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <OutputType>Exe</OutputType>
+        <LangVersion>default</LangVersion>
     </PropertyGroup>
     <PropertyGroup>
         <PlatformTarget>AnyCPU</PlatformTarget>
@@ -12,11 +13,11 @@
         <Configuration>Release</Configuration>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="BenchmarkDotNet" Version="0.13.5" />
-        <PackageReference Include="BenchmarkDotNet.Diagnostics.Windows" Version="0.13.5" />
+        <PackageReference Include="BenchmarkDotNet" Version="0.13.12" />
+        <PackageReference Include="BenchmarkDotNet.Diagnostics.Windows" Version="0.13.12" />
         <PackageReference Include="Nett" Version="0.15.0" />
-        <PackageReference Include="Samboy063.Tomlet" Version="5.1.2" />
-        <PackageReference Include="Tomlyn" Version="0.16.2" />
+        <PackageReference Include="Samboy063.Tomlet" Version="5.3.1" />
+        <PackageReference Include="Tomlyn" Version="0.17.0" />
         <PackageReference Include="Tommy" Version="3.1.2" />
     </ItemGroup>
 </Project>
